--- a/Examen 2/compras.html
+++ b/Examen 2/compras.html
@@ -16,10 +16,11 @@
     <main id="contenedor" class="container">
         <div class="row">
             <nav class="col-md-12 con-sd-12">
-                <a  href="index.html">Inicio</a>
-                <a  href="productos.html" >Productos</a>
+                <a href="index.html">Inicio</a>
+                <a href="productos.html">Productos</a>
                 <a href="proyectos.html">Proyectos</a>
-                <a href="compras.html" data-bs-toggle="modal" data-bs-target="#staticBackdrop" class="active">Compras</a>
+                <a href="compras.html" data-bs-toggle="modal" data-bs-target="#staticBackdrop"
+                    class="active">Compras</a>
                 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
                     tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                     <div class="modal-dialog">
@@ -35,17 +36,19 @@
 
                                 <div class="d-flex align-items-center">
                                     <div class="flex-shrink-0">
-                                        <img src="img/logo.png" alt="Producto"
-                                            style="width: 100px; height: 100px;">
+                                        <img src="img/logo.png" alt="Producto" style="width: 100px; height: 100px;">
                                     </div>
                                     <div class="flex-grow-1 ms-3">
-                                        <p style="color: black; text-align: justify;">¡Ferreteria Clavito, te presenta un lugar donde puedes hacer las compras de los materiales que nececites desde la counidad de tu casa!
-                                            </p>
+                                        <p style="color: black; text-align: justify;">¡Ferreteria Clavito, te presenta
+                                            un lugar donde puedes hacer las compras de los materiales que nececites
+                                            desde la counidad de tu casa!
+                                        </p>
                                     </div>
                                 </div>
 
                             </div>
-                            <div class="modal-footer"><!-- Link de redirección a la página de compras -->
+                            <div class="modal-footer">
+                                <!-- Link de redirección a la página de compras -->
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                                 <a type="button" class="btn btn-primary" href="./compras.html">Ir a la tienda</a>
                             </div>
@@ -80,15 +83,17 @@
                                                 style="width: 100px; height: 100px;">
                                         </div>
                                         <div class="flex-grow-1 ms-3">
-                                            <p style="color: black; text-align: justify;">Ferreteria Clavito te da la Bienvenida.
+                                            <p style="color: black; text-align: justify;">Ferreteria Clavito te da la
+                                                Bienvenida.
                                                 Aprovecha nuestras increíbles
                                                 ofertas por BlackFriday.
-                                                </p>
+                                            </p>
                                         </div>
                                     </div>
 
                                 </div>
-                                <div class="modal-footer"> <!-- Link de redirección a la página de compras -->
+                                <div class="modal-footer">
+                                    <!-- Link de redirección a la página de compras -->
                                     <button type="button" class="btn btn-secondary"
                                         data-bs-dismiss="modal">Cerrar</button>
                                     <a type="button" class="btn btn-primary" href="./compras.html">Ir a la
@@ -138,10 +143,10 @@
                             </div>
                             <br>
                             <button id="enviar_compra" type="button" class="btn btn-primary" onclick="escribir_info()"
-                            data-bs-toggle="modal" data-bs-target="#contenedorModalCompra">
-                            Enviar Compra
-                        </button> <br>
-                        <button id="vaciar_compras" class="btn btn-warning">Nueva Compra</button>
+                                data-bs-toggle="modal" data-bs-target="#contenedorModalCompra">
+                                Enviar Compra
+                            </button> <br>
+                            <button id="vaciar_compras" class="btn btn-warning">Nueva Compra</button>
                         </form>
                     </div>
                 </div>
@@ -154,6 +159,7 @@
 
 
         </div>
+
 
 
         <!-- Footer -->
@@ -172,29 +178,28 @@
                                 <h6 class="text-uppercase fw-bold mb-4">UBÍCANOS EN:</h6>
                                 <p><i class="fas fa-home me-3"></i> Av. Francisco Cabrera 321 - Chiclayo</p>
                                 <p><i class="fas fa-envelope me-3"></i>
-                                    FarmaciaBV@atiende.com
+                                    FerretieraClavito@atcliente.com
                                 </p>
-                                <p><i class="fas fa-phone me-3"></i>+51 942 123 431</p>
+                                <p><i class="fas fa-phone me-3"></i>+51 985 429 107</p>
                             </div>
                             <!--Grid column-->
 
                             <!--Grid column-->
                             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                                <h6 class="text-uppercase fw-bold mb-4">REDES SOCIALES:</h6>
+                                <h6 class="text-uppercase fw-bold mb-4"> REDES SOCIALES:</h6>
 
-                                <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998"
-                                    href="https://es-la.facebook.com" target="_blank" role="button"><i
-                                        class="fab fa-facebook"></i></a>
-                                <a class="btn btn-primary btn-floating m-1" style="background-color: #6e24a0"
-                                    href="https://www.instagram.com/?hl=es-la" target="_blank" role="button"><i
-                                        class="fab fa-instagram"></i></i></a>
-                                <br>
-                                <a class="btn btn-primary btn-floating m-1" style="background-color: #23b8dd;"
-                                    href="https://twitter.com" target="_blank" role="button"><i
-                                        class="fab fa-twitter-square"></i></a>
-                                <a class="btn btn-primary btn-floating m-1" style="background-color: #cc1717"
-                                    href="https://www.youtube.com" target="_blank" role="button"> <i
-                                        class="fab fa-youtube-square"></i></a>
+                                <!-- Facebook -->
+                                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+                                    <i class="fab fa-facebook-f"></i></a>
+                                <!-- Instagram -->
+                                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+                                    <i class="fab fa-instagram"></i></a>
+                                <!-- Twitter -->
+                                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+                                    <i class="fab fa-twitter"></i></a>
+                                <!-- Google + -->
+                                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+                                    <i class="fab fa-google"></i></a>
                             </div>
                             <!--Grid column-->
 
@@ -205,9 +210,9 @@
                                     <tbody class="fw-normal">
                                         <tr>
                                             <iframe
-                                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3962.0777467303633!2d-79.86522724971844!3d-6.760374295089207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x904ceeeffd190ddd%3A0xce387ae6229aa09e!2sUSAT!5e0!3m2!1ses!2spe!4v1624290765410!5m2!1ses!2spe"
-                                                width="100%" height="80%" style="border:0;" allowfullscreen=""
-                                                loading="lazy"></iframe>
+                                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.9650211198837!2d-79.84267998565392!3d-6.774111968127418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x904cef2885b35c73%3A0xe63453e9d705ac73!2sFrancisco%20Cabrera%20321%2C%20Chiclayo%2014001!5e0!3m2!1ses!2spe!4v1668718663503!5m2!1ses!2spe"
+                                                width="350" height="300" style="border:0;" allowfullscreen=""
+                                                loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -221,45 +226,12 @@
                 </div>
                 <!-- Grid container -->
 
-                
 
             </footer>
         </div>
 
 
 
-        <!--Ventana Modal-->
-        <div class="modal fade " id="contenedorModalCompra" tabindex="-1" aria-labelledby="exampleModalLabel"
-            aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Compra Registrada</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-
-
-                    <div class="modal-body ">
-                        <img class="iconcarrito"
-                            src="https://images.vexels.com/media/users/3/200060/isolated/preview/e39eb7217c7b5157d2c9154564d76598-icono-de-carrito-de-compras-rosa-by-vexels.png"
-                            alt="">
-                        <div class="contTexto">
-                            <h6 class="modal_text">Nombres y Apellidos:</h6>
-                            <h6 id="info_nombre" class="modal_text">______________________________</h6> <br>
-                            <h6 class="modal_text">Email:</h6>
-                            <h6 id="info_email" class="modal_text">______________________________</h6><br>
-                            <h6 id="info_total" class="modal_text">Total Compra: S/.00,00</h6>
-                        </div>
-                    </div>
-
-                    <div class="modal-footer sinBorde">
-                        <button type="button" class="btn btn-secondary botonModal"
-                            data-bs-dismiss="modal">Aceptar</button>
-                    </div>
-                </div>
-            </div>
-        </div>
 
     </main>
 
