--- a/Examen 2/nosotros.html
+++ b/Examen 2/nosotros.html
@@ -16,10 +16,10 @@
     <main id="contenedor" class="container">
         <div class="row">
             <nav class="col-md-12 con-sd-12">
-                <a  href="./index.html">Inicio</a>
-                <a  href="productos.html">Productos</a>
+                <a href="./index.html">Inicio</a>
+                <a href="productos.html">Productos</a>
                 <a href="./proyectos.html">Proyectos</a>
-                <a href="./compras.html" data-bs-toggle="modal" data-bs-target="#staticBackdrop" >Compras</a>
+                <a href="./compras.html" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Compras</a>
                 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
                     tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                     <div class="modal-dialog">
@@ -39,14 +39,16 @@
                                             style="width: 100px; height: 100px;">
                                     </div>
                                     <div class="flex-grow-1 ms-3">
-                                        <p style="color: black; text-align: justify;">Ferreteria Clavito, te da la Bienvenida.
+                                        <p style="color: black; text-align: justify;">Ferreteria Clavito, te da la
+                                            Bienvenida.
                                             Aprovecha nuestras increíbles
                                             ofertas por BlackFriday.</p>
                                     </div>
                                 </div>
 
                             </div>
-                            <div class="modal-footer"><!-- Link de redirección a la página de compras -->
+                            <div class="modal-footer">
+                                <!-- Link de redirección a la página de compras -->
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                                 <a type="button" class="btn btn-primary" href="Compras.html">Ir a la tienda</a>
                             </div>
@@ -67,7 +69,8 @@
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="staticBackdropLabel" style="color: red;">¡Bienvenido a la Ferreteria Clavito!
+                                    <h5 class="modal-title" id="staticBackdropLabel" style="color: red;">¡Bienvenido a
+                                        la Ferreteria Clavito!
                                     </h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal"
                                         aria-label="Close"></button>
@@ -77,18 +80,19 @@
 
                                     <div class="d-flex align-items-center">
                                         <div class="flex-shrink-0">
-                                            <img src="img/logo.png" alt="Producto"
-                                                style="width: 100px; height: 100px;">
+                                            <img src="img/logo.png" alt="Producto" style="width: 100px; height: 100px;">
                                         </div>
                                         <div class="flex-grow-1 ms-3">
-                                            <p style="color: black; text-align: justify;">Ferreteria Clavito, te da la Bienvenida.
+                                            <p style="color: black; text-align: justify;">Ferreteria Clavito, te da la
+                                                Bienvenida.
                                                 Aprovecha nuestras increíbles
                                                 ofertas por BlackFriday.</p>
                                         </div>
                                     </div>
 
                                 </div>
-                                <div class="modal-footer"> <!-- Link de redirección a la página de compras -->
+                                <div class="modal-footer">
+                                    <!-- Link de redirección a la página de compras -->
                                     <button type="button" class="btn btn-secondary"
                                         data-bs-dismiss="modal">Cerrar</button>
                                     <a type="button" class="btn btn-primary" href="Compras.html">Ir a la
@@ -104,131 +108,146 @@
                 <h1 id="titulo" class="text-left">Ferreteria Clavito</h1>
             </header>
         </div>
-<br>
-<br>
-              
-            <div class="row mt-5">
+        <br>
+        <br>
 
-                <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="card item shadow">
-                        <h2 class="text-center card-header bg-dark text-white">QUIENES SOMOS</h2>
-                        <div class="card-body">
-                            <p class="card-text">
-                                Somos una empresa dedicada a la distribución de insumos y equipamiento para la soldadura, con una eficiente infraestructura de servicio y soporte técnico, orientada a suministrar a sus clientes soluciones efectivas. Con una larga trayectoria en el mercado local, ha establecido importantes relaciones corporativas con los líderes de la industria para asegurar la calidad y la confiabilidad de sus equipos e insumos.
-                            </p>
-                        </div>
+        <div class="row mt-5">
+
+            <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="card item shadow">
+                    <h2 class="text-center card-header bg-dark text-white">QUIENES SOMOS</h2>
+                    <div class="card-body">
+                        <p class="card-text">
+                            Somos una empresa dedicada a la distribución de insumos y equipamiento para la soldadura,
+                            con una eficiente infraestructura de servicio y soporte técnico, orientada a suministrar a
+                            sus clientes soluciones efectivas. Con una larga trayectoria en el mercado local, ha
+                            establecido importantes relaciones corporativas con los líderes de la industria para
+                            asegurar la calidad y la confiabilidad de sus equipos e insumos.
+                        </p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="card item shadow">
-                        <h2 class="text-center card-header bg-dark text-white">MISIÓN</h2>
-                        <div class="card-body">
-                            <p class="card-text">
-                                Proveer soluciones con materiales y herramientas de ferretería para la construcción civil, pequeña industria y artesanía, manejando un surtido completo y permanente que permita llegar a los clientes con un servicio oportuno de alta calidad a un precio competitivo. Ofrecer la mejor atención posible a sus clientes a través de un personal altamente capacitado, eficiente y responsable.
-                                 <br>
-                                 <br>
-                            </p>
-                        </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="card item shadow">
+                    <h2 class="text-center card-header bg-dark text-white">MISIÓN</h2>
+                    <div class="card-body">
+                        <p class="card-text">
+                            Proveer soluciones con materiales y herramientas de ferretería para la construcción civil,
+                            pequeña industria y artesanía, manejando un surtido completo y permanente que permita llegar
+                            a los clientes con un servicio oportuno de alta calidad a un precio competitivo. Ofrecer la
+                            mejor atención posible a sus clientes a través de un personal altamente capacitado,
+                            eficiente y responsable.
+                            <br>
+                            <br>
+                        </p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-12 col-sm-12">
-                    <div class="card item shadow">
-                        <h2  class="text-center card-header bg-dark text-white">VISIÓN</h2>
-                        <div class="card-body">
-                            <p class="card-text">
-                                
-                                Ser reconocidos como distribuidores y detallistas líderes en proveer soluciones completas en materiales de ferretería, productos de línea industrial y semi-industrial cuya atención al cliente brinda un portafolio de servicios  complementarios y de calidad creando valor económico a través de la búsqueda de la excelencia y su expansión en el mercado peruano
-                                <br>
-                                <br>
-                                <br>
+            </div>
+            <div class="col-lg-4 col-md-12 col-sm-12">
+                <div class="card item shadow">
+                    <h2 class="text-center card-header bg-dark text-white">VISIÓN</h2>
+                    <div class="card-body">
+                        <p class="card-text">
 
-                            </p>
-                        </div>
+                            Ser reconocidos como distribuidores y detallistas líderes en proveer soluciones completas en
+                            materiales de ferretería, productos de línea industrial y semi-industrial cuya atención al
+                            cliente brinda un portafolio de servicios complementarios y de calidad creando valor
+                            económico a través de la búsqueda de la excelencia y su expansión en el mercado peruano
+                            <br>
+                            <br>
+                            <br>
+
+                        </p>
                     </div>
                 </div>
-
             </div>
 
         </div>
-    </div>
-</div>
-<br>
-<br>
-<br>
-<br>
- <!-- Footer -->
- <div class="row">
-    <footer class=" text-center text-white" style="background-color:rgb(3, 4, 5);">
-        <!-- Grid container -->
-        <div class="container p-4" style="margin-bottom: 1%;">
-
-            <!-- Section: Links -->
-            <section class="">
-                <!--Grid row-->
-                <div class="row">
-
-                    <!--Grid column-->
-                    <div class="col-md-5 col-lg-4 col-xl-4 mx-auto mb-3">
-                        <h6 class="text-uppercase fw-bold mb-4">UBÍCANOS EN:</h6>
-                        <p><i class="fas fa-home me-3"></i> Av.  - Chiclayo</p>
-                        <p><i class="fas fa-envelope me-3"></i>
-                            FerretieraClavito@atcliente.com
-                        </p>
-                        <p><i class="fas fa-phone me-3"></i>+51 985 429 107</p>
-                    </div>
-                    <!--Grid column-->
-
-                    <!--Grid column-->
-                    <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                        <h6 class="text-uppercase fw-bold mb-4"> REDES SOCIALES:</h6>
-
-                            <!-- Facebook -->
-                            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
-                                <i class="fab fa-facebook-f"></i></a>
-                            <!-- Instagram -->
-                            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
-                                <i class="fab fa-instagram"></i></a>
-                            <!-- Twitter -->
-                            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
-                                <i class="fab fa-twitter"></i></a>
-                            <!-- Google + -->
-                            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
-                                <i class="fab fa-google"></i></a>
-                    </div>
-                    <!--Grid column-->
-
-                    <!--Grid column-->
-                    <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mb-3">
-                        <h6 class="text-uppercase fw-bold mb-4">MAPA DE UBICACIÓN:</h6>
-                        <table class="table text-center text-white">
-                            <tbody class="fw-normal">
-                                <tr>
-                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.9650211198837!2d-79.84267998565392!3d-6.774111968127418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x904cef2885b35c73%3A0xe63453e9d705ac73!2sFrancisco%20Cabrera%20321%2C%20Chiclayo%2014001!5e0!3m2!1ses!2spe!4v1668718663503!5m2!1ses!2spe" width="350" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                                                                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <!--Grid column-->
-                </div>
-                <!--Grid row-->
-            </section>
-            <!-- Section: Links -->
 
         </div>
-        <!-- Grid container -->
+        </div>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <!-- Footer -->
+        <div class="row">
+            <footer class=" text-center text-white" style="background-color:rgb(0, 0, 0);">
+                <!-- Grid container -->
+                <div class="container p-4" style="margin-bottom: 1%;">
+
+                    <!-- Section: Links -->
+                    <section class="">
+                        <!--Grid row-->
+                        <div class="row">
+
+                            <!--Grid column-->
+                            <div class="col-md-5 col-lg-4 col-xl-4 mx-auto mb-3">
+                                <h6 class="text-uppercase fw-bold mb-4">UBÍCANOS EN:</h6>
+                                <p><i class="fas fa-home me-3"></i> Av. Francisco Cabrera 321 - Chiclayo</p>
+                                <p><i class="fas fa-envelope me-3"></i>
+                                    FerretieraClavito@atcliente.com
+                                </p>
+                                <p><i class="fas fa-phone me-3"></i>+51 985 429 107</p>
+                            </div>
+                            <!--Grid column-->
+
+                            <!--Grid column-->
+                            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                                <h6 class="text-uppercase fw-bold mb-4"> REDES SOCIALES:</h6>
+
+                                <!-- Facebook -->
+                                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+                                    <i class="fab fa-facebook-f"></i></a>
+                                <!-- Instagram -->
+                                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+                                    <i class="fab fa-instagram"></i></a>
+                                <!-- Twitter -->
+                                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+                                    <i class="fab fa-twitter"></i></a>
+                                <!-- Google + -->
+                                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+                                    <i class="fab fa-google"></i></a>
+                            </div>
+                            <!--Grid column-->
+
+                            <!--Grid column-->
+                            <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mb-3">
+                                <h6 class="text-uppercase fw-bold mb-4">MAPA DE UBICACIÓN:</h6>
+                                <table class="table text-center text-white">
+                                    <tbody class="fw-normal">
+                                        <tr>
+                                            <iframe
+                                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.9650211198837!2d-79.84267998565392!3d-6.774111968127418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x904cef2885b35c73%3A0xe63453e9d705ac73!2sFrancisco%20Cabrera%20321%2C%20Chiclayo%2014001!5e0!3m2!1ses!2spe!4v1668718663503!5m2!1ses!2spe"
+                                                width="350" height="300" style="border:0;" allowfullscreen=""
+                                                loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <!--Grid column-->
+                        </div>
+                        <!--Grid row-->
+                    </section>
+                    <!-- Section: Links -->
+
+                </div>
+                <!-- Grid container -->
 
 
-    </footer>
-</div>
+            </footer>
+        </div>
 
 
 
 
-</main>
+    </main>
 
-<script src="https://kit.fontawesome.com/14fbf06638.js" crossorigin="anonymous"></script>
-<script src="Js/bootstrap.min.js"></script>
-<script src="Js/compras.js"></script>
+    <script src="https://kit.fontawesome.com/14fbf06638.js" crossorigin="anonymous"></script>
+    <script src="Js/bootstrap.min.js"></script>
+    <script src="Js/compras.js"></script>
 </body>
 
 </html>
