--- a/Examen 2/proyectos.html
+++ b/Examen 2/proyectos.html
@@ -16,16 +16,16 @@
     <main id="contenedor" class="container">
         <div class="row">
             <nav class="col-md-12 con-sd-12">
-                <a  href="index.html">Inicio</a>
-                <a  href="productos.html">Productos</a>
+                <a href="index.html">Inicio</a>
+                <a href="productos.html">Productos</a>
                 <a href="proyectos.html" class="active">Proyectos</a>
-                <a href="Compras.html" data-bs-toggle="modal" data-bs-target="#staticBackdrop" >Compras</a>
+                <a href="Compras.html" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Compras</a>
                 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
                     tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="staticBackdropLabel" style="color: red;">¡Bienvenido!
+                                <h5 class="modal-title" id="staticBackdropLabel" style="color: brown;">¡Bienvenido!
                                 </h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="Close"></button>
@@ -35,19 +35,18 @@
 
                                 <div class="d-flex align-items-center">
                                     <div class="flex-shrink-0">
-                                        <img src="img/logo.png" alt="Producto"
+                                        <img src="./img/FERRETERIA.png" alt="Producto"
                                             style="width: 100px; height: 100px;">
                                     </div>
                                     <div class="flex-grow-1 ms-3">
-                                        <p style="color: black; text-align: justify;">Farmacia BV te da la Bienvenida.
-                                            Aprovecha nuestras increíbles
-                                            ofertas de fin de
-                                            semana.</p>
+                                        <p style="color: black; text-align: justify;">¡Ferreteria Clavito, te presenta
+                                            un lugar donde puedes hacer las compras de los materiales que nececites
+                                            desde la counidad de tu casa!</p>
                                     </div>
                                 </div>
 
                             </div>
-                            <div class="modal-footer"><!-- Link de redirección a la página de compras -->
+                            <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                                 <a type="button" class="btn btn-primary" href="Compras.html">Ir a la tienda</a>
                             </div>
@@ -58,7 +57,7 @@
             </nav>
             <header class="conteiner-fluid">
                 <div id="foto">
-                    <img src="Img/logo.png" alt="Farmacia BV">
+                    <img src="./img/FERRETERIA.png" alt="Farmacia BV">
                 </div>
                 <div id="inicio">
                     <button type="button" class="btn btn-primary btn-floating btn-light btn-lg" data-bs-toggle="modal"
@@ -68,7 +67,8 @@
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="staticBackdropLabel" style="color: red;">¡Bienvenido!
+                                    <h5 class="modal-title" id="staticBackdropLabel" style="color: brown;">¡Bienvenido a
+                                        la Ferreteria Clavito !
                                     </h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal"
                                         aria-label="Close"></button>
@@ -78,19 +78,20 @@
 
                                     <div class="d-flex align-items-center">
                                         <div class="flex-shrink-0">
-                                            <img src="img/logo.png" alt="Producto"
+                                            <img src="./img/FERRETERIA.png" alt="Producto"
                                                 style="width: 100px; height: 100px;">
                                         </div>
                                         <div class="flex-grow-1 ms-3">
-                                            <p style="color: black; text-align: justify;">Farmacia BV te da la Bienvenida.
+                                            <p style="color: black; text-align: justify;">Ferreteria Clavito te da la
+                                                Bienvenida.
                                                 Aprovecha nuestras increíbles
-                                                ofertas de fin de
-                                                semana.</p>
+                                                ofertas por BlackFriday.</p>
                                         </div>
                                     </div>
 
                                 </div>
-                                <div class="modal-footer"> <!-- Link de redirección a la página de compras -->
+                                <div class="modal-footer">
+                                    <!-- Link de redirección a la página de compras -->
                                     <button type="button" class="btn btn-secondary"
                                         data-bs-dismiss="modal">Cerrar</button>
                                     <a type="button" class="btn btn-primary" href="Compras.html">Ir a la
@@ -103,58 +104,60 @@
                     <a type="button" class="btn btn-floating btn-light btn-lg"><i class="fas fa-user"></i></a>
                 </div>
                 <br>
-                <h1 id="titulo" class="text-left">Farmacia BV</h1>
+                <h1 id="titulo" class="text-left">Ferreteria Clavito</h1>
             </header>
         </div>
 
         <div class="row">
-            <section style="background-color:rgb(241, 201, 115)"; class="col-md-6 col-sm-12">
+            <section style="background-color:#691c1c" ; class="col-md-6 col-sm-12">
                 <div id="ftproyectos"><br><br>
-                   <br><br> <img id="ftpry" src="Img/proyectos.jpg" alt="">
+                    <br><br> <img id="ftpry" src="./img/proyecto.jpg" alt="">
                 </div>
             </section>
 
-            <aside class="col-md-6" style="background-color:rgb(34, 73, 117)";>
-                    <br><h1 id="proyectos">PROYECTOS</h1><br>
-                    <div class="row  row-cols-1 row-cols-md-4 my-2 m-0 justify-content-around">
-                        <div class="card" style="width: 13rem;">
-                            <img src="Img/agenda.png" class="card-img-top mt-2" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">PROYECTO 1</h5>
-                                <p class="card-text">Agenda versión 03</p>
-                            </div>
-                            <div class="btn">
-                                <a href="proyectos/agendaV3/agendav3.html" class="btn btn-dark">Ver proyecto</a>
-                            </div>
+            <aside class="col-md-6" style="background-color:rgb(0, 0, 0)" ;>
+                <br>
+                <h1 id="proyectos" style="color: white;">PROYECTOS</h1><br>
+                <div class="row  row-cols-1 row-cols-md-4 my-2 m-0 justify-content-around">
+                    <div class="card" style="width: 13rem;">
+                        <img src="./img/1246943.png" class="card-img-top mt-2" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">PROYECTO 1</h5>
+                            <p class="card-text">Agenda versión 03</p>
                         </div>
-                        <div class="card" style="width: 13rem;">
-                            <img src="Img/pacman.png" class="card-img-top mt-2" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">PROYECTO 2</h5>
-                                <p class="card-text"> Animación Fantasma</p>
-                            </div>
-                            <div class="btn">
-                                <a href="Proyectos/fantasma/fantasma.html" class="btn btn-dark">Ver proyecto</a>
-                            </div>
-                        </div>
-                        <div class="card" style="width: 13rem;">
-                            <img src="Img/veterinario.png" class="card-img-top mt-2" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">PROYECTO 3</h5>
-                                <p class="card-text">Página Bootstrap - Veterinaria</p>
-                            </div>
-                            <div class="btn">
-                                <a href="Proyectos/Veterinaria/veterinaria4patas.html" class="btn btn-dark">Ver proyecto</a>
-                            </div>
+                        <div class="btn">
+                            <a href="./proyectos/Agenda V3/agendaV3.html" class="btn btn-dark">Ver proyecto</a>
                         </div>
                     </div>
+                    <div class="card" style="width: 13rem;">
+                        <img src="./img/fantasma.png" class="card-img-top mt-2" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">PROYECTO 2</h5>
+                            <p class="card-text"> Animación Fantasma</p>
+                        </div>
+                        <div class="btn">
+                            <a href="#" class="btn btn-dark">Ver proyecto</a>
+                        </div>
+                    </div>
+                    <div class="card" style="width: 13rem;">
+                        <img src="./img/veterinaria.png" class="card-img-top mt-2" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">PROYECTO 3</h5>
+                            <p class="card-text">Veterinaria</p>
+                        </div>
+                        <div class="btn">
+                            <a href="./proyectos/veterinaria/index.html" class="btn btn-dark">Ver proyecto</a>
+                        </div>
+                    </div>
+                </div>
             </aside>
         </div>
 
 
+
         <!-- Footer -->
         <div class="row">
-            <footer class=" text-center text-white" style="background-color:rgb(34, 73, 117);">
+            <footer class=" text-center text-white" style="background-color:rgb(0, 0, 0);">
                 <!-- Grid container -->
                 <div class="container p-4" style="margin-bottom: 1%;">
 
@@ -166,31 +169,30 @@
                             <!--Grid column-->
                             <div class="col-md-5 col-lg-4 col-xl-4 mx-auto mb-3">
                                 <h6 class="text-uppercase fw-bold mb-4">UBÍCANOS EN:</h6>
-                                <p><i class="fas fa-home me-3"></i> Av. Elias Aguirre 150 - Chiclayo</p>
+                                <p><i class="fas fa-home me-3"></i> Av. Francisco Cabrera 321 - Chiclayo</p>
                                 <p><i class="fas fa-envelope me-3"></i>
-                                    FarmaciaBV@atiende.com
+                                    FerretieraClavito@atcliente.com
                                 </p>
-                                <p><i class="fas fa-phone me-3"></i>+51 942 123 431</p>
+                                <p><i class="fas fa-phone me-3"></i>+51 985 429 107</p>
                             </div>
                             <!--Grid column-->
 
                             <!--Grid column-->
                             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                                <h6 class="text-uppercase fw-bold mb-4">REDES SOCIALES:</h6>
+                                <h6 class="text-uppercase fw-bold mb-4"> REDES SOCIALES:</h6>
 
-                                <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998"
-                                    href="https://es-la.facebook.com" target="_blank" role="button"><i
-                                        class="fab fa-facebook"></i></a>
-                                <a class="btn btn-primary btn-floating m-1" style="background-color: #6e24a0"
-                                    href="https://www.instagram.com/?hl=es-la" target="_blank" role="button"><i
-                                        class="fab fa-instagram"></i></i></a>
-                                <br>
-                                <a class="btn btn-primary btn-floating m-1" style="background-color: #23b8dd;"
-                                    href="https://twitter.com" target="_blank" role="button"><i
-                                        class="fab fa-twitter-square"></i></a>
-                                <a class="btn btn-primary btn-floating m-1" style="background-color: #cc1717"
-                                    href="https://www.youtube.com" target="_blank" role="button"> <i
-                                        class="fab fa-youtube-square"></i></a>
+                                <!-- Facebook -->
+                                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+                                    <i class="fab fa-facebook-f"></i></a>
+                                <!-- Instagram -->
+                                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+                                    <i class="fab fa-instagram"></i></a>
+                                <!-- Twitter -->
+                                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+                                    <i class="fab fa-twitter"></i></a>
+                                <!-- Google + -->
+                                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+                                    <i class="fab fa-google"></i></a>
                             </div>
                             <!--Grid column-->
 
@@ -201,9 +203,9 @@
                                     <tbody class="fw-normal">
                                         <tr>
                                             <iframe
-                                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3962.0777467303633!2d-79.86522724971844!3d-6.760374295089207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x904ceeeffd190ddd%3A0xce387ae6229aa09e!2sUSAT!5e0!3m2!1ses!2spe!4v1624290765410!5m2!1ses!2spe"
-                                                width="100%" height="80%" style="border:0;" allowfullscreen=""
-                                                loading="lazy"></iframe>
+                                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.9650211198837!2d-79.84267998565392!3d-6.774111968127418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x904cef2885b35c73%3A0xe63453e9d705ac73!2sFrancisco%20Cabrera%20321%2C%20Chiclayo%2014001!5e0!3m2!1ses!2spe!4v1668718663503!5m2!1ses!2spe"
+                                                width="350" height="300" style="border:0;" allowfullscreen=""
+                                                loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -217,8 +219,12 @@
                 </div>
                 <!-- Grid container -->
 
+
             </footer>
         </div>
+
+
+
 
     </main>
 
